syntax = "proto3";

package product;
option java_multiple_files = true;
option java_package = "product_service";

service ProductService {
  rpc FindProductVariantById(FindProductVariantByIdRequest) returns (FindProductVariantByIdResponse);
  rpc FindProductVariantsByIds(FindProductVariantsByIdsRequest) returns (FindProductVariantsByIdsResponse);

  rpc FindProductVariantByListId(FindProductVariantByListProductVariantIdRequest) returns (FindProductVariantByListProductVariantIdResponse);
}


message OrderItemAndProductVariantId {
  string orderItemId = 1;
  string productVariantId = 2;
}
message FindProductVariantByListProductVariantIdRequest {
  repeated OrderItemAndProductVariantId ids = 1;
}
message FindProductVariantByListProductVariantIdResponse {
  int32 status = 1;
  string message = 2;
  repeated ProductVariantRes productVariants = 3;
}

message ProductVariantRes {
  string id = 1;
  string name = 2;
  string slug = 3;
  string size = 4;
  string colorName = 5;
  string colorHex = 6;
  string cover = 7;
  double price = 8;
  double originalPrice = 9;
  string orderItemId = 10;
}

message ProductVariant {
  string id = 1;
  string name = 2;
  string slug = 3;
  string size = 4;
  string colorName = 5;
  string colorHex = 6;
  string cover = 7;
  double price = 8;
  double originalPrice = 9;
  string cartItemId = 10;
}
message FindProductVariantByIdRequest {
  string id = 1;
}
message FindProductVariantByIdResponse {
  int32 status = 1;
  string message = 2;
  ProductVariant productVariant = 3;
}

message CartItemField {
  string cartItemId = 1;
  string productVariantId = 2;
}
message FindProductVariantsByIdsRequest {
  repeated CartItemField cartItemField = 1;
}
message FindProductVariantsByIdsResponse {
  int32 status = 1;
  string message = 2;
  repeated ProductVariant productVariant = 3;
}


